update hero and features copy to emphasize offline matchmaking and ta'aruf
- change hero title to highlight offline marriage matchmaking and ta'aruf in Indonesia
- update hero description to emphasize offline, faith-aligned service with family vetting
- modify hero tagline to specify halal, offline introductions
- revise whyChoose description to clarify offline, faith-aligned team for ta'aruf seekers
- update whyChoose secondary text to mention halal courtship guidance
- change features subtitle

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,9 +30,9 @@
   "homepage": {
     "hero": {
       "badge": "SERIOUS MATCHMAKING",
-      "title": "A Love That Lasts a Lifetime",
-      "description": "Jodohmu is where serious commitment meets modern matchmaking. We provide a heartfelt, premium service to help you find your soulmate in a way that honors your faith and values.",
-      "tagline": "Taaruf-guided introductions for sincere hearts ready for marriage.",
+      "title": "Offline Marriage Matchmaking & Ta'aruf in Indonesia",
+      "description": "Jodohmu guides serious, marriage-intent singles with offline, faith-aligned matchmaking, ta'aruf facilitation, and family-friendly vetting across Indonesia.",
+      "tagline": "Halal, offline introductions for sincere hearts ready for marriage.",
       "cta": "Begin Your Journey",
       "secondaryCta": "Talk to an Advisor",
       "highlight": {
@@ -63,8 +63,8 @@
     "whyChoose": {
       "badge": "WHY JODOHMU",
       "title": "Why Choose Jodohmu?",
-      "description": "We are more than an app. We are your dedicated partners in finding a meaningful, lasting marriage.",
-      "secondary": "With a dedicated matchmaker by your side, every introduction is curated with care, intention, and deep respect for your values.",
+      "description": "We are more than an app. We are your offline, faith-aligned marriage matchmaking team for serious ta'aruf seekers.",
+      "secondary": "Every introduction is curated with care, intention, and deep respect for your values—guided by matchmakers who understand halal courtship.",
       "highlights": {
         "trust": {
           "title": "Serious, Vetted Community",
@@ -83,7 +83,7 @@
     "features": {
       "badge": "PERSONAL MATCHING",
       "title": "Concierge matchmaking crafted around you",
-      "subtitle": "Each introduction is handpicked by our matchmakers, blending data, discernment, and heartfelt conversations so your journey feels designed—not automated.",
+      "subtitle": "Handpicked offline introductions for serious, marriage-ready singles—ta'aruf guidance, family involvement, and respectful venues across Indonesia.",
       "tagline": "Premium Service",
       "cta": "Discover how we guide you",
       "storyTitle": "HOW IT FEELS",
