--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -30,9 +30,9 @@
   "homepage": {
     "hero": {
       "badge": "PENCARIAN JODOH SERIUS",
-      "title": "Cinta Seumur Hidup",
-      "description": "Jodohmu adalah tempat komitmen serius bertemu dengan perjodohan modern. Kami menyediakan layanan premium yang tulus untuk membantu Anda menemukan belahan jiwa dengan cara yang menghormati iman dan nilai-nilai Anda.",
-      "tagline": "Taaruf yang dibimbing untuk hati-hati tulus yang siap menikah.",
+      "title": "Perjodohan Offline & Ta'aruf Serius di Indonesia",
+      "description": "Jodohmu membimbing lajang berniat menikah dengan perjodohan offline yang halal, fasilitasi ta'aruf, serta penyaringan keluarga di seluruh Indonesia.",
+      "tagline": "Perkenalan offline yang halal untuk hati-hati tulus yang siap menikah.",
       "cta": "Mulai Perjalanan Anda",
       "secondaryCta": "Bicara dengan Advisor",
       "highlight": {
@@ -63,8 +63,8 @@
     "whyChoose": {
       "badge": "KENAPA JODOHMU",
       "title": "Mengapa Memilih Jodohmu?",
-      "description": "Kami lebih dari sekadar aplikasi. Kami adalah mitra setia Anda dalam menemukan pernikahan yang bermakna dan langgeng.",
-      "secondary": "Dengan matchmaker pribadi mendampingi, setiap perkenalan dikurasi penuh kepedulian, niat baik, dan penghormatan terhadap nilai-nilai Anda.",
+      "description": "Kami bukan sekadar aplikasi. Kami tim perjodohan offline yang sejalan iman untuk pencari ta'aruf serius.",
+      "secondary": "Setiap perkenalan dikurasi penuh niat baik, hormat, dan nilai syariah—dibimbing matchmaker yang paham adab ta'aruf.",
       "highlights": {
         "trust": {
           "title": "Komunitas Serius & Terverifikasi",
@@ -83,7 +83,7 @@
     "features": {
       "badge": "PENCARIAN PERSONAL",
       "title": "Matchmaking concierge yang dirancang khusus untuk Anda",
-      "subtitle": "Setiap perkenalan dipilih langsung oleh matchmaker kami—memadukan data, intuisi, dan percakapan hangat agar perjalanan terasa terkurasi, bukan otomatis.",
+      "subtitle": "Perkenalan offline terpilih untuk lajang siap nikah—panduan ta'aruf, pelibatan keluarga, dan venue yang terhormat di seluruh Indonesia.",
       "tagline": "Layanan Premium",
       "cta": "Pelajari cara kami membimbing Anda",
       "storyTitle": "SEPERTI APA RASANYA",
